nestum/tests/ui/fail_non_enum.rs
use nestum::nestum;

#[nestum]
struct NotAnEnum {
    x: i32,
}

fn main() {}
